# mbfvar

./: .gitignore  .readthedocs.yml  DOCUMENTATION_IMPROVEMENTS.md  MUFBVAR.toml  PACKAGE_RENAME_SUMMARY.md  README.md  READTHEDOCS_SETUP.md  pyproject.toml  requirements.txt  setup.py  test_ragged_edge.py
MBFVAR/: __init__.py  _estimation.py  _hyp_opt.py  _save.py  mbfvar.py  mbfvar_data.py  mfbvar_funcs.py
MBFVAR/cholcov/: setup.py
MBFVAR/pseudo_inverse/: pseudo_inverse.h  setup.py
MUFBVAR/: MUFBVAR.py  __init__.py  _estimation.py  _hyp_opt.py  _plots.py  _save.py  generate_docs.py  mfbvar_funcs.py  mufbvar.py  mufbvar_data.py  multifrequency_var.py
MUFBVAR.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
MUFBVAR/cholcov/: cholcov.cpp  cholcov.h  cholcov_bindings.cpp  setup.py
MUFBVAR/funcs/: mfbvar_funcs.py
MUFBVAR/inverse/: matrix_inversion.cpp  setup.py
MUFBVAR/pseudo_inverse/: setup.py  your_bindings.cpp
MUFBVAR/solve/: setup.py  solve.cpp  solve.h
_build/pdf/: .buildinfo  MUFBVAR.cholcov.html  MUFBVAR.html  MUFBVAR.inverse.html  MUFBVAR.pseudo_inverse.html  MUFBVAR.solve.html  index.html  modules.html  objects.inv  pdf_metadata.json  py-modindex.html  search.html  searchindex.js
_build/pdf/.doctrees/: MUFBVAR.cholcov.doctree  MUFBVAR.doctree  MUFBVAR.pseudo_inverse.doctree  MUFBVAR.solve.doctree  environment.pickle
_build/pdf/_modules/: index.html
docs/: MUFBVAR.html  conf.py  index.html  index.rst  requirements.txt  search.js  test.html
docs/MUFBVAR/: _estimation.html  _hyp_opt.html  _plots.html  _save.html  cholcov.html  inverse.html  mfbvar_funcs.html  pseudo_inverse.html  solve.html
docs/source/: MUFBVAR.cholcov.rst  MUFBVAR.inverse.rst  MUFBVAR.pseudo_inverse.rst  MUFBVAR.rst  MUFBVAR.solve.rst  conf.py  examples.rst  index.rst  intro.rst  modules.rst
examples/: advanced_example.py  basic_example.py  cond.xlsx  cond_fctest.xlsx  generate_data.py  hist.xlsx  hist_fctest.xlsx  hist_small.xlsx  out_test.xlsx  python_example.py  r_example.R  stock_prices.csv  test.xlsx  test_basic.py  test_fc.xlsx  test_offsets.py  test_q.xlsx
source/: conf.py  index.rst
src/MUFBVAR/: MUFBVAR.py  mfbvar_funcs.py
(+104 files in other folders)
