[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MUFBVAR"
version = "0.0.1"
dependencies = [
"numpy",
"scipy",
"pandas",
"datetime",
"matplotlib",
"tqdm",
"plotly",
"fanchart",
"openpyxl",
"xlsxwriter"
]
requires-python = ">= 3.8"
authors = [
  {name = "Laurent Florin", email = "laurent.florin@efv.admin.ch"}]
description = "Multifrequency Bayesian VAR Model"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
]
[project.urls]
Repository = "https://gitea.efv.admin.ch/efv_fs/MUFBVAR.git"


