[build-system]
requires = ["setuptools", "pybind11", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["MUFBVAR*"]

[project]
name = "MUFBVAR"
version = "0.5.2"
dependencies = [
"numpy",
"scipy",
"pandas",
"datetime",
"matplotlib",
"tqdm",
"plotly",
"fanchart",
"openpyxl",
"xlsxwriter",
"bayesian-optimization",
"arm-mango" 
]
requires-python = ">= 3.8"
authors = [
  {name = "Laurent Florin", email = "laurent.florin@efv.admin.ch"}]
description = "Multifrequency Bayesian VAR Model"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
]
[project.urls]
Repository = "https://gitea.efv.admin.ch/efv_fs/MUFBVAR.git"
